user-mgmt/base/user/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    nstype: user
    istio.io/rev: asm-1122-0
    jupyter: req
