user-mgmt/base/user/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
spec:
  ports:
  - name: jupyter
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    hub.jupyter.org/username: default
  sessionAffinity: None
  type: ClusterIP
