user-mgmt/base/user/default-sidecar-policy.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
#  workloadSelector:
#    labels:
#      k8s-app: mypod

  outboundTrafficPolicy:
    mode: REGISTRY_ONLY    
#  egress: 
#    - hosts:
#        - './*'
#        - 'jupyter/hub.jupyter.svc.cluster.local'
#        - 'kube-system/kube-dns.kube-system.cluster.local'
#        - 'proxy/squid.proxy.svc.cluster.local'
#        - 'istio-ingress/*'
#        - 'istio-egress/*'
